--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,8 @@
     <title>404 Not Found!</title>
 </head>
 <body>
-    <h1>Error 404 Not Found</h1>
-    <p>Link atau target yang anda tuju tidak dapat ditemukan</p>
+    <h1 style="text-align: center;">Maaf :(</h1>
+    <p style="text-align: center;">Penerbangan yangg anda cari tidak dapat ditemukan</p>
+    <p style="text-align: center;"><a href="/">Kembali ke Home</a></p>
 </body>
 </html>
