--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/img/favicon.png" rel="icon">
-  <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/img/logo.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -32,16 +31,20 @@
 </head>
 
 <body>
-
-
-
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1 style="color: white;">Welcome to Skypedia</h1>
+      <h1 style="color: white;">Halo <%= firstname %> !</h1>
       <h2 style="color: white;">Mau jalan jalan kemana?</h2>
-
       <form action="/search" method="post" role="form" class="php-email-form">
+        <% if(check) { %>
+          <div class="alert alert-danger" role="alert">
+            <strong>Ups...</strong> <%= check %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        <% } %> 
         <div class="row no-gutters">
           <div class="col-md-6 form-group pr-md-1">
             <select name="from" class="form-control">
@@ -60,12 +63,10 @@
             </select>
           </div>
         </div>
-
-        <div class="mb-1">
-          <div class="loading">Loading</div>
-          <div class="error-message"></div>
-          <div class="sent-message">Your notification request was sent. Thank you!</div>
-        </div>
+        <div class="text-center">
+          <p style="color: white;">Pilih tanggal berangkat</p>
+          <input type="date" name="dateflight">
+        </div><br>
         <div class="text-center"><button type="submit">Cari Penerbangan!</button></div>
       </form>
     </div>
