Done, finalizing tmr

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="/user">Profil Saya</a></li>
           <li><a href="/user/history">History Saya</a></li>
-          <li><a href="/logout">Logout</a></li>
+          <li><a href="/logout" onclick="return confirm('Kamu yakin mau logout?');">Logout</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
