--- a/views/user/history.ejs
+++ b/views/user/history.ejs
@@ -10,6 +10,8 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 		<link href="/css/style.css" rel="stylesheet">
 
 		<style>
@@ -46,7 +48,7 @@
 					<ul class="right hide-on-med-and-down">
 						<li><a href="/user/history">History Perjalanan Kamu</a></li>
 						<li><a href="/user">Profil Kamu</a></li>
-						<li><a href="/logout">Logout</a></li>
+						<li><a href="/logout" onclick="return confirm('Kamu yakin mau logout?');">Logout</a></li>
 					</ul>
 					<a href="javascript: void(0);" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				</div>
@@ -55,6 +57,14 @@
 
 		<main class="container">
 			<h4>History Kamu</h4>
+			<% if (status) { %>
+				<div class="alert alert-success alert-dismissible fade show" role="alert">
+					<%= status %>
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+			<% } %> 
 			<h6>Total Perjalanan Kamu: <%= data.Flights.length %></h6>
 			<!-- <p>Ingin tahu cara memperoleh Skypedia Miles? <a href="/user/history?help=Kamu akan mendapatkan 10 point">Klik Disini!</a></p> -->
 			<div class="section">
@@ -69,7 +79,7 @@
 								<th>Tanggal Keberangkatan</th>
 								<th>Harga</th>
 								<th>Jam Berangkat</th>
-								<th>Booking ID</th>
+								<th>Nomor e-Tiket</th>
 								<th>Action</th>
 							</tr>
 						</thead>
@@ -108,5 +118,8 @@
 			</div>
 			</div>
 		</footer><!-- End #footer -->
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 	</body>	
 </html>
