--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -10,7 +10,9 @@
 	<title>Profile <%= data.fullName(data.first_name, data.last_name) %> </title>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link href="/css/style.css" rel="stylesheet">
 
 	<style>
@@ -47,7 +49,7 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="/user/history">History Perjalanan Kamu</a></li>
 					<li><a href="/user">Profil Kamu</a></li>
-					<li><a href="/logout">Logout</a></li>
+					<li><a href="/logout" onclick="return confirm('Kamu yakin mau logout?');">Logout</a></li>
 				</ul>
 				<a href="javascript: void(0);" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			</div>
